2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-select-next-line, w3m-select-previous-line): New
	functions, to maintain column position when navigation buffer-selection
	pop-up.
	(w3m-select-buffer-mode-map, w3m-select-buffer-next-line): Use the new functions.
	(w3m-select-buffer-show-this-line): maintain column position.
	(w3m-select-buffer-next-line): Remove Xemacs support

2019-05-27  Tatsuya Kinoshita  <tats@debian.org>

	* w3m-bookmark.el (w3m-bookmark-file-modtime): Chase links
	([emacs-w3m:13427]).

2019-05-27  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-copy-buffer): Bug fix for [emacs-w3m:13417], by
	duplicating internal code of function clone-buffer.

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--message): BUGFIX: Handling of sub-string "%29".

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el (w3m-session-select-merge): New feature, allows moving
	data between sessions.
	(w3m-session-select-mode-map): Bind new feature to 'm' and 'M'.
	(w3m-session-select-mode): Document the new feature.

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-new-session-in-background, w3m-goto-url-new-session):
	update documentation for clarity and for use of prefix arguemnt.

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el (w3m-session-select-select): Don't quit after each
	individual session action.
	(w3m-session-goto-session): Preserve session buffer in its window, use
	w3m version of message function, remove needless nreverse, do not
	create duplicate buffers.

2019-05-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-bookmark.el (w3m-bookmark-add): Bugfix: Order of args to function
	string-match. Message text tweak.
	(w3m-bookmark-add-all-urls): Operate in all display modes, only ask for
	section once, provide sane default section, don't add bookmarks
	buffers, auto-refresh existing bookmark buffers, improve error
	handling, add tab character to whitespace regexp, use set-buffer